fix: scrollbar on modules and blogs

--- a/src/layout/css/_Modal.scss
+++ b/src/layout/css/_Modal.scss
@@ -18,7 +18,7 @@
   padding-top: 10px !important;
 }
 
-::-webkit-scrollbar {
+.modal::-webkit-scrollbar {
   width: 0;
   background: transparent;
 }
